# materialize-starter-project

./: .gitignore  .sqlfluffignore  README.md  dbt_project.yml  package-lock.yml  packages.yml  profiles.yml  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: deploy.yml  merge.yml  test.yml
macros/: drop_target_schema.sql
models/: auction_house.yml  winning_bids.sql
